--- a/estilo.css
+++ b/estilo.css
@@ -113,8 +113,7 @@ body {
   margin: 0;
   padding: 0;
 
-  background-image: url("imagens/How-to-Draw-a-Pug.jpg"),
-    var(--gradiente-cores-principais);
+  background-image: url("imagens/image.png"), var(--gradiente-cores-principais);
 
   background-size: var(--tamanho-imagem-pug), var(--tamanho-gradiente);
 
