--- a/estilo.css
+++ b/estilo.css
@@ -26,8 +26,12 @@
   --sombra-rosa: 0 0 20px var(--rosa-neon);
   --sombra-ciano: 0 0 20px var(--ciano-neon);
   --sombra-amarela: 0 0 15px rgba(255, 255, 0, 0.5);
-  --sombra-texto-neon: 0 0 10px var(--rosa-neon), 0 0 20px var(--ciano-neon),
-    0 0 30px var(--amarelo-neon);
+
+  --sombra-texto-neon: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff,
+    0 0 80px #0ff;
+  /* --sombra-texto-neon: 0 0 10px var(--rosa-neon), 0 0 20px var(--ciano-neon),
+    0 0 30px var(--amarelo-neon); */
+
   --gradiente-cores-principais: linear-gradient(
     45deg,
     var(--rosa-neon),
@@ -168,7 +172,7 @@ h1 {
   box-shadow: 0 0 25px rgba(255, 255, 0, 0.8);
 }
 
-.tier-label {
+/* .tier-label {
   width: 180px;
   font-weight: 900;
   padding: var(--espacamento-pequeno);
@@ -180,6 +184,23 @@ h1 {
   font-size: var(--tamanho-rotulo-tier);
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   letter-spacing: 2px;
+} */
+
+.tier-label {
+  width: 180px;
+  font-weight: 900;
+  padding: var(--espacamento-pequeno);
+  text-align: center;
+  background: var(--gradiente-rosa-ciano);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: var(--tamanho-rotulo-tier);
+  letter-spacing: 2px;
+
+  /* Neon effect */
+  text-shadow: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff,
+    0 0 80px #0ff;
 }
 
 .drop-zone {
@@ -277,7 +298,7 @@ h1 {
 }
 
 .tier-row:nth-child(5) .tier-label {
-  background: var(--gradiente-escuro);
+  /* background: var(--gradiente-escuro); */
   background-clip: text;
   -webkit-background-clip: text;
 }
