--- a/estilo.css
+++ b/estilo.css
@@ -194,9 +194,9 @@ h1 {
   font-size: var(--tamanho-rotulo-tier);
   letter-spacing: 2px;
 
-  /* Neon effect */
   text-shadow: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff,
     0 0 80px #0ff;
+  flex-shrink: 0 !important;
 }
 
 .drop-zone {
