--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Courier+New&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Courier+New&display=swap"); */
+
+/* Define a fonte variável Orbitron */
+@font-face {
+  font-family: "Orbitron";
+  src: url("../fonts/Orbitron/Orbitron-VariableFont_wght.ttf")
+    format("truetype");
+  font-weight: 100 900; /* Range de pesos suportados (100 a 900) */
+  font-display: swap;
+}
 
 :root {
   --rosa-neon: #f355ff;
@@ -29,8 +38,6 @@
 
   --sombra-texto-neon: 0 0 5px #0ff, 0 0 10px #0ff, 0 0 20px #0ff, 0 0 40px #0ff,
     0 0 80px #0ff;
-  /* --sombra-texto-neon: 0 0 10px var(--rosa-neon), 0 0 20px var(--ciano-neon),
-    0 0 30px var(--amarelo-neon); */
 
   --gradiente-cores-principais: linear-gradient(
     45deg,
@@ -77,7 +84,7 @@
   --borda-arredondada-grande: 15px;
   --borda-arredondada-media: 10px;
   --borda-arredondada-pequena: 8px;
-  --fonte-principal: "Orbitron", "Courier New", monospace;
+  --fonte-principal: "Orbitron";
   --tamanho-titulo: 2.5em;
   --tamanho-titulo-mobile: 1.8em;
   --tamanho-rotulo-tier: 1.2em;
