arrastando cima baixo

--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,5 @@
 @import url(./css/selecionar_tiers.css);
+@import url(css/arrasto_modal.css);
 
 /* =========================
    1. VARIÁVEIS E FONTES
