add footer na branch errada

--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,6 @@
 @import url(./css/selecionar_tiers.css);
 @import url(css/arrasto_modal.css);
+@import url(./css/footer.css);
 
 /* =========================
    1. VARIÁVEIS E FONTES
